# VisionMonitor

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  camerathread.cpp  camerathread.h  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  serialthread.cpp  serialthread.h  visiondetector.cpp  visiondetector.h
.githooks/: pre-commit
models/: README.md  classes.txt
tools/: camera_probe.cpp  check_comment_policy.ps1  install_git_hooks.ps1  modbus_tcp_server.py  tcp_sensor_server.py
